--- a/releases/prod/azure-vote-app.yaml
+++ b/releases/prod/azure-vote-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   releaseName: azure-vote-app
   chart:
-    git: https://github.com/Azure/arc-helm-demo
+    git: https://github.com/tsubasaxZZZ/azurearc-helm-test
     path: charts/azure-vote
     ref: master
   values:
